Unreleased

Changed
    Add up to 5 second delay opening operation sockets to prevent browser weirdness

Fixed
    Disconnecting from VGA terminal could cause node crash (#498)
    Cant move instance from host we have as a socket connection to another host
    Migrate instance popup doesnt open

0.14.0 - 08/05/2022

Added
    Control history duration on homepage
    Snapshot scheduling
    Filter events table by user & event name on frontend
    Support new network metric keys (#433)
    Show instant cloud-init-output.log results when deploying cloud-config
    Add setting options to create VM (#419)
    View instance proxy device on instance view (#443)
    Add instance proxy device on instance view (#443)
    Pretty frontend URLs (#179)
    User can change project analytics duration shown
    Filtering project analytics by host & those without any usage
    Support for connecting to host over unix socket (#391)
    Show certificate expires date on admin hosts overview (#482)

Changed
    Use correct width for terminal on init
    Resize terminal on window resize
    Upgrade to bootstrap 5
    Remove operations from sidebar that are complete / failed older than 5 minutes (#407)
    Only admins can create projects (#429)
    Improve user parameter display on instance events
    Improve the following modal UI / UX;
        - create project
        - create container
        - create VM
        - create network
        - create profile
        - create storage pool
    Support limits when creating a project (#434)
    Show packets_dropped_outbound & packets_dropped_inbound on networks overview
    Support project limits on projects frontend
    Don't require filling out the image twice when deploying cloud-config
    Support choosing project when deploying cloud-config
    Only allow choosing one host when deploying cloud-config (only on frontend)
    Add cloud & desktop icons to image lists to indicate different variants